@@ -1,6 +1,7 @@
 Revision history for BioX-Writer
 
 {{$NEXT}}
+    Made some changes to local attr
 
 0.12  2015-11-23 10:09:39 GST
     - Added global attr to eval call
